# src/resources/swagger.json
@@ -6,7 +6,7 @@
         "title": "Halcyon Api"
     },
     "paths": {
-        "/api/Account/Register": {
+        "/Account/Register": {
             "post": {
                 "tags": ["Account"],
                 "consumes": ["application/json"],
@@ -37,7 +37,7 @@
                 }
             }
         },
-        "/api/Account/RegisterExternal": {
+        "/Account/RegisterExternal": {
             "post": {
                 "tags": ["Account"],
                 "consumes": ["application/json"],
@@ -68,7 +68,7 @@
                 }
             }
         },
-        "/api/Account/ForgotPassword": {
+        "/Account/ForgotPassword": {
             "put": {
                 "tags": ["Account"],
                 "consumes": ["application/json"],
@@ -99,7 +99,7 @@
                 }
             }
         },
-        "/api/Account/ResetPassword": {
+        "/Account/ResetPassword": {
             "put": {
                 "tags": ["Account"],
                 "consumes": ["application/json"],
@@ -130,7 +130,7 @@
                 }
             }
         },
-        "/api/Manage": {
+        "/Manage": {
             "get": {
                 "tags": ["Manage"],
                 "produces": ["application/json"],
@@ -220,7 +220,7 @@
                 }
             }
         },
-        "/api/Manage/VerifyEmail": {
+        "/Manage/VerifyEmail": {
             "put": {
                 "tags": ["Manage"],
                 "produces": ["application/json"],
@@ -250,7 +250,7 @@
                 }
             }
         },
-        "/api/Manage/ConfirmEmail": {
+        "/Manage/ConfirmEmail": {
             "put": {
                 "tags": ["Manage"],
                 "consumes": ["application/json"],
@@ -290,7 +290,7 @@
                 }
             }
         },
-        "/api/Manage/ChangePassword": {
+        "/Manage/ChangePassword": {
             "put": {
                 "tags": ["Manage"],
                 "consumes": ["application/json"],
@@ -330,7 +330,7 @@
                 }
             }
         },
-        "/api/Manage/SetPassword": {
+        "/Manage/SetPassword": {
             "put": {
                 "tags": ["Manage"],
                 "consumes": ["application/json"],
@@ -370,7 +370,7 @@
                 }
             }
         },
-        "/api/Manage/Login": {
+        "/Manage/Login": {
             "post": {
                 "tags": ["Manage"],
                 "consumes": ["application/json"],
@@ -448,7 +448,7 @@
                 }
             }
         },
-        "/api/Manage/TwoFactor": {
+        "/Manage/TwoFactor": {
             "get": {
                 "tags": ["Manage"],
                 "produces": ["application/json"],
@@ -538,7 +538,7 @@
                 }
             }
         },
-        "/api/Seed": {
+        "/Seed": {
             "get": {
                 "tags": ["Seed"],
                 "produces": ["application/json"],
@@ -553,7 +553,7 @@
                 }
             }
         },
-        "/api/Token": {
+        "/Token": {
             "post": {
                 "tags": ["Token"],
                 "consumes": ["application/json"],
@@ -584,7 +584,7 @@
                 }
             }
         },
-        "/api/User": {
+        "/User": {
             "get": {
                 "tags": ["User"],
                 "produces": ["application/json"],
@@ -663,7 +663,7 @@
                 }
             }
         },
-        "/api/User/{id}": {
+        "/User/{id}": {
             "get": {
                 "tags": ["User"],
                 "produces": ["application/json"],
@@ -773,7 +773,7 @@
                 }
             }
         },
-        "/api/User/{id}/Lock": {
+        "/User/{id}/Lock": {
             "put": {
                 "tags": ["User"],
                 "produces": ["application/json"],
@@ -810,7 +810,7 @@
                 }
             }
         },
-        "/api/User/{id}/Unlock": {
+        "/User/{id}/Unlock": {
             "put": {
                 "tags": ["User"],
                 "produces": ["application/json"],
